Unifies naming and bump version

--- a/examples/imagenette/notebooks/LR Finder.ipynb
+++ b/examples/imagenette/notebooks/LR Finder.ipynb
@@ -21,7 +21,7 @@
     "from torch.utils.data import DataLoader\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from helperbot.lr_finder import LRFinder\n",
+    "from pytorch_helper_bot.lr_finder import LRFinder\n",
     "from main import (\n",
     "    get_seresnet_model, MixUpSoftmaxLoss, \n",
     "    WeightDecayOptimizerWrapper, NO_DECAY, N_CLASSES, DATA_ROOT,\n",
